# raycast-extension-reading-paper

./: README.md
assets/: main.py
backend/: .gitignore  main.py  mcp_server.py  pyproject.toml
raycast-extension/: CHANGELOG.md  README.md  package-lock.json  package.json  raycast-env.d.ts
raycast-extension/src/: explain-research-words.tsx
