[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.71.0",
    "arxiv>=2.2.0",
    "fastapi>=0.120.0",
    "mcp>=1.19.0",
    "pydantic>=2.12.3",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.38.0",
]
